<resources>
    <string name="app_name">EcoTrack-v1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_select">Who do you want to be?</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="logout">Logout\n</string>
    <string name="LoginPrompt">Already a user? Login</string>
    <string name="appName">EcoTrack</string>
    <string name="newsHeadline">Latest on Environmental Innovation and Climate Action</string>
    <string name="title_activity_maps_report">MapsReportActivity</string>
    <string name="Maps_Api_Key">locale.p</string>
    <string name="Browse">Browse</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="profile_image_description">Profile Photo</string>
    <string name="report_head">Report Trash around you!</string>
    <string name="statusHeader">Your Reports</string>
    <string name="swStatusHeader">Trash Reports</string>
    <string name="forgot_password_header">Forgot Password?</string>
    <string name="forgot_password_prompt">Please enter your registered Email ID to reset your password.</string>
    <string name="leaderBoard">LeaderBoard</string>

</resources>