<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.login.RegisterActivity">
<LinearLayout
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:background="@color/black">
    <ImageView
        android:layout_width="170dp"
        android:id="@+id/img_profile"
        android:layout_margin="10dp"
        android:src="@drawable/ic_profile_white"
        android:layout_gravity="center_vertical"

        android:layout_height="200dp"
        android:contentDescription="@string/profile_image_description" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_choose_image"
        android:text="@string/Browse"/>
</LinearLayout>
    <EditText
        android:id="@+id/fullname"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_rounded_corners"
        android:textColorHint="@color/hintGrey"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:hint="@string/prompt_fullname"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_rounded_corners"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textColorHint="@color/hintGrey"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
       />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:textColorHint="@color/hintGrey"
        android:background="@drawable/edit_text_rounded_corners"
        android:layout_marginTop="8dp"

        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:selectAllOnFocus="true"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textColorHint="@color/hintGrey"
        android:background="@drawable/edit_text_rounded_corners"
        android:textColor="@color/black"
        android:hint="@string/action_select"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        >
        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/appGreen"
        android:layout_marginBottom="34dp"
        android:text="@string/action_register"
 />
    <TextView
        android:id="@+id/txt_loginprompt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/LoginPrompt"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_gravity="center"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</LinearLayout>