<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ecotracklogo"
        android:layout_gravity="center_horizontal"
        android:layout_height="200dp"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/icon_profile"
        android:background="@drawable/edit_text_rounded_corners"
        android:textColor="@color/black"
        android:textColorHint="@color/hintGrey"
        android:layout_marginTop="16dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_rounded_corners"
        android:textColorHint="@color/hintGrey"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_password"
        android:padding="10dp"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/appGreen"
        android:layout_marginBottom="34dp"
        android:text="@string/action_login"
        />

    <TextView
        android:id="@+id/txt_regPrompt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="New to the app? Register"
        android:textAlignment="center"/>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</LinearLayout>