<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_password_header"
        android:textAlignment="center"
        android:textColor="@color/appGreen"
        android:textSize="29sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_margin = "20dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_prompt"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/reset_password_email"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_height="40dp"
        android:textCursorDrawable="@null"
        android:outlineAmbientShadowColor="@color/black"
        android:drawableLeft="@drawable/icon_profile"
        android:background="@drawable/edit_text_rounded_corners"
        android:textColor="@color/black"
        android:textColorHint="@color/hintGrey"
        android:layout_marginTop="16dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_margin="20dp"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <Button
           android:id="@+id/btn_reset_password"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="Reset"
           />
       <Button
           android:id="@+id/btn_forgot_back"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
           android:drawableLeft="@drawable/ic_back_arrow"
           android:text="Back"
           />
   </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_reseting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</LinearLayout>